--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -2,5 +2,6 @@
   <li><a href="{{ root_url }}/">Blog</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
   <li><a href="{{ root_url }}/readings">Lista de lectura</a></li>
+  <li><a href="{{ root_url }}/pet-projects">Pet projects</a></li>
   <li><a href="{{ root_url }}/about">About</a></li>
 </ul>
