--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,13 +1,4 @@
 <p>
-    <div>
-        <div style="float: left;">
-            <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.es_CO">
-                <img alt="Licencia Creative Commons" 
-                     style="border-width: 0; margin-right: 2px;" 
-                     src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" />
-            </a>
-        </div>
-
-        Este sitio está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.es_CO">Licencia Creative Commons</a> - {{ site.time | date: "%Y" }} - {{ site.author }} | <span class="credit">Básicamente, este blog es posible gracias a <a href="http://octopress.org">octopress</a>, <a href="http://github.com">github</a> y otros</span>
-    </div>
+  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
+  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
