:sparkles: Integrate Libre Counter for website stats

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,4 +10,14 @@
     Puedes contribuir a este blog editando {% github_edit_link "este fichero" %} en GitHub
   </div>
   {% endif %}
+
+  <div>
+    Contando visitas con:
+  </div>
+  <div>
+    <a href="https://librecounter.org/referer/show" target="_blank">
+      <img src="https://librecounter.org/outline-orange.svg" referrerPolicy="unsafe-url" />
+    </a>
+  </div>
+
 </footer>
