--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,3 +61,13 @@ a[rel="full-article"]:hover {
   background-color: #0366d6;
   color: #ddd;
 }
+
+.image-footer {
+  text-align: center;
+  margin-bottom: 1em;
+  margin-top: -1em;
+}
+
+.image-footer span {
+  font-size: 60%;
+}
